250808 23:39 이재빈 리스트 수정중

--- a/webapp/app/myPageNormal/normalMark.html
+++ b/webapp/app/myPageNormal/normalMark.html
@@ -13,80 +13,99 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <a href=""><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a>
       <ul>
-        <a href="./normalModify.html"><li>개인정보 수정</li></a>
-        <a href="./normalMark.html"><li>찜한 목록</li></a>
-        <a href="./normalheart.html"><li>하트 목록</li></a>
-        <a href="./normalMatching.html"><li>매칭 기록</li></a>
-        <a href="./normalMesseage.html"><li>쪽지함</li></a>
-        <a href="./normalPost.html"><li>게시글 관리</li></a>
-        <a href="./normalPoint.html"><li>포인트 충전</li></a>
-        <a href="./normalReference.html"><li>1 대 1 문의</li></a>
-        <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
+        <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
+        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalMark.html">찜한 목록</a></li>
+        <li><a href="./normalheart.html">하트 목록</a></li>
+        <li><a href="./normalMatching.html">매칭 기록</a></li>
+        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalPost.html">게시글 관리</a></li>
+        <li><a href="./normalPoint.html">포인트 충전</a></li>
+        <li><a href="./normalReference.html">1 대 1 문의</a></li>
+        <li><a href="./normalQuit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
     <form action="" method="get">
       <div class="div_mark">
         <div class="title">찜한 목록</div>
         <nav class="mark_nav">
-          <input type="checkbox">
-          <div>
-            <div class="name">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><div>이름</div></li>
+            <li class="location"><div>위치</div></li>
+            <li class="phone"><div>전화번호</div></li>
+          </ul>
+        </nav>
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
               <div>이름</div>
-            </div>
-            <div class="location">
+            </li>
+            <li class="location">
               <div>위치</div>
-            </div>
-            <div class="phone">
+            </li>
+            <li class="phone">
               <div>전화번호</div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </nav>
         <nav class="mark_list">
-          <input type="checkbox">
-          <a href="">
-            <div>
-              <div class="name">
-                <div>이름</div>
-              </div>
-              <div class="location">
-                <div>dfjklgjsdfkljglsjfglskjfgkljsfsdiuhfksdjhfskjhfsjhfksjfhskjfhshfsjkfhskjfhsjfhklkj</div>
-              </div>
-              <div class="phone">
-                <div>전화번호</div>
-              </div>
-            </div>
-          </a>
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>이름</div>
+            </li>
+            <li class="location">
+              <div>위치</div>
+            </li>
+            <li class="phone">
+              <div>전화번호</div>
+            </li>
+          </ul>
         </nav>
         <nav class="mark_list">
-          <input type="checkbox">
-          <a href="">
-            <div>
-              <div class="name">
-                <div>이름</div>
-              </div>
-              <div class="location">
-                <div>dfjkfsjhfksjfhskjfhshfsjkfhskjfhsdfsdfsfsfdsjfdfsffsdfhklkj</div>
-              </div>
-              <div class="phone">
-                <div>전화번호</div>
-              </div>
-            </div>
-          </a>
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>이름</div>
+            </li>
+            <li class="location">
+              <div>위치</div>
+            </li>
+            <li class="phone">
+              <div>전화번호</div>
+            </li>
+          </ul>
         </nav>
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
+              <div>이름</div>
+            </li>
+            <li class="location">
+              <div>위치</div>
+            </li>
+            <li class="phone">
+              <div>전화번호</div>
+            </li>
+          </ul>
+        </nav>
+        
         <nav class="page">
           <ul>
-            <a href=""><li>&lt;</li></a>
-            <a href=""><li>1</li></a>
-            <a href=""><li>2</li></a>
-            <a href=""><li>3</li></a>
-            <a href=""><li>4</li></a>
-            <a href=""><li>&gt;</li></a>
+            <li><a href="">&lt;</a></li>
+            <li><a href="">1</a></li>
+            <li><a href="">2</a></li>
+            <li><a href="">3</a></li>
+            <li><a href="">4</a></li>
+            <li><a href="">&gt;</a></li>
           </ul>
         </nav>
         <div class="div_delete">
-          <button>찜 삭제</button>
+          <button>찜 삭제</button>  
         </div>
       </div>
     </form>
