--- a/webapp/app/myPageNormal/normalPost.html
+++ b/webapp/app/myPageNormal/normalPost.html
@@ -13,17 +13,17 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <a href=""><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></a>
       <ul>
-        <a href="./normalModify.html"><li>개인정보 수정</li></a>
-        <a href="./normalMark.html"><li>찜한 목록</li></a>
-        <a href="./normalheart.html"><li>하트 목록</li></a>
-        <a href="./normalMatching.html"><li>매칭 기록</li></a>
-        <a href="./normalMesseage.html"><li>쪽지함</li></a>
-        <a href="./normalPost.html"><li>게시글 관리</li></a>
-        <a href="./normalPoint.html"><li>포인트 충전</li></a>
-        <a href="./normalReference.html"><li>1 대 1 문의</li></a>
-        <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
+        <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
+        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalMark.html">찜한 목록</a></li>
+        <li><a href="./normalheart.html">하트 목록</a></li>
+        <li><a href="./normalMatching.html">매칭 기록</a></li>
+        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalPost.html">게시글 관리</a></li>
+        <li><a href="./normalPoint.html">포인트 충전</a></li>
+        <li><a href="./normalReference.html">1 대 1 문의</a></li>
+        <li><a href="./normalQuit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
     <form action="" method="get">
@@ -35,51 +35,76 @@
           </ul>
         </nav>
         <nav class="mark_nav">
-          <input type="checkbox">
-          <div>
-            <div class="name">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name">
               <div>작성자</div>
-            </div>
-            <div class="location">
+            </li>
+            <li class="posttitle">
               <div>제목</div>
-            </div>
-            <div class="phone">
+            </li>
+            <li class="day">
               <div>날짜</div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </nav>
         <nav class="mark_list">
-          <input type="checkbox">
-          <a href="">
-          <div>
-            <div class="name">
-              <div>작성자</div>
-            </div>
-            <div class="location">
-              <div>제목</div>
-            </div>
-            <div class="phone">
-              <div>날짜</div>
-            </div>
-          </div>
-          </a>
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><a href="">
+                <div>작성자</div>
+              </a></li>
+            <li class="posttitle"><a href="">
+                <div>제목</div>
+              </a></li>
+            <li class="day"><a href="">
+                <div>날짜</div>
+              </a></li>
+          </ul>
         </nav>
         <nav class="mark_list">
-          <input type="checkbox">
-          <a href="">
-          <div>
-            <div class="name">
-              <div>작성자</div>
-            </div>
-            <div class="location">
-              <div>제목</div>
-            </div>
-            <div class="phone">
-              <div>날짜</div>
-            </div>
-          </div>
-          </a>
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><a href="">
+                <div>작성자</div>
+              </a></li>
+            <li class="posttitle"><a href="">
+                <div>제목</div>
+              </a></li>
+            <li class="day"><a href="">
+                <div>날짜</div>
+              </a></li>
+          </ul>
         </nav>
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><a href="">
+                <div>작성자</div>
+              </a></li>
+            <li class="posttitle"><a href="">
+                <div>제목</div>
+              </a></li>
+            <li class="day"><a href="">
+                <div>날짜</div>
+              </a></li>
+          </ul>
+        </nav>
+        <nav class="mark_list">
+          <ul>
+            <li><input type="checkbox"></li>
+            <li class="name"><a href="">
+                <div>작성자</div>
+              </a></li>
+            <li class="posttitle"><a href="">
+                <div>제목</div>
+              </a></li>
+            <li class="day"><a href="">
+                <div>날짜</div>
+              </a></li>
+          </ul>
+        </nav>
+
         <nav class="page">
           <ul>
             <a href=""><li>&lt;</li></a>
