--- a/webapp/app/myPageNormal/normalPwCheck.html
+++ b/webapp/app/myPageNormal/normalPwCheck.html
@@ -13,17 +13,17 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#">
       <ul>
-        <a href="./normalModify.html"><li>개인정보 수정</li></a>
-        <a href="./normalMark.html"><li>찜한 목록</li></a>
-        <a href="./normalheart.html"><li>하트 목록</li></a>
-        <a href="./normalMatching.html"><li>매칭 기록</li></a>
-        <a href="./normalMesseage.html"><li>쪽지함</li></a>
-        <a href="./normalPost.html"><li>게시글 관리</li></a>
-        <a href="./normalPoint.html"><li>포인트 충전</li></a>
-        <a href="./normalReference.html"><li>1 대 1 문의</li></a>
-        <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
+        <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
+        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalMark.html">찜한 목록</a></li>
+        <li><a href="./normalheart.html">하트 목록</a></li>
+        <li><a href="./normalMatching.html">매칭 기록</a></li>
+        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalPost.html">게시글 관리</a></li>
+        <li><a href="./normalPoint.html">포인트 충전</a></li>
+        <li><a href="./normalReference.html">1 대 1 문의</a></li>
+        <li><a href="./normalQuit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
     <div class="pw_check">
