250808 23:53 장성주 돌봄회원 마이페이지 수정중

--- a/webapp/app/myPageCare/careMessage.html
+++ b/webapp/app/myPageCare/careMessage.html
@@ -80,36 +80,92 @@
     </div>
   </main>
 
-<div class="modal_bg" id="msgModal">
+  <!-- <div class="modal_bg" id="msgModal">
+    <div class="modal_box">
+      <div class="modal_read">
+        <span class="modal_title">받은 쪽지 읽기</span>
+        <span class="modal_close" onclick="closeMsgModal()">&times;</span>
+      </div>
+      <div class="modal_info">
+        <div class="sender_info">
+          <span>보낸 사람 : </span>강버들 | <span class="sender_id">kangbudle01</span>
+        </div>
+        <div class="message_content">
+          쪽지 확인하시면 카톡 좀 봐주세요
+        </div>
+      </div>
+      <div class="modal_button">
+        <button class="btn_reply">답장</button>
+        <button class="btn_delete">삭제</button>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- <div class="modal_bg" id="sendMsgModal">
   <div class="modal_box">
     <div class="modal_read">
-      <span class="modal_title">받은 쪽지 읽기</span>
-      <span class="modal_close" onclick="closeMsgModal()">&times;</span>
+      <span class="modal_title">쪽지 보내기</span>
+      <span class="modal_close" onclick="closeSendMsgModal()">&times;</span>
     </div>
     <div class="modal_info">
       <div class="sender_info">
-        <span>보낸 사람 : </span>강버들 | <span class="sender_id">kangbudle01</span>
+        <span>받는 사람 : </span>강버들 | <span class="sender_id">kangbudle01</span>
       </div>
-      <div class="message_content">
-        쪽지 확인하시면 카톡 좀 봐주세요
-      </div>
+      <textarea class="message_textarea" placeholder="내용을 입력하세요"></textarea>
     </div>
     <div class="modal_button">
-      <button class="btn_reply">답장</button>
-      <button class="btn_delete">삭제</button>
+      <button class="btn_send">보내기</button>
+      <button class="btn_cancel">취소</button>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="modal_bg" id="sendSuccessModal">
+  <!-- <div class="modal_bg" id="sendSuccessModal">
     <div class="modal_box modal_send">
       <p class="send_message">쪽지를 보냈습니다.</p>
       <div class="modal_button">
         <button class="btn_confirm" onclick="closeSendModal()">확인</button>
       </div>
     </div>
-  </div>
+  </div> -->
 
+<!-- <div class="modal_bg" id="deleteMsgModal">
+  <div class="modal_box confirm_modal">
+    <p class="confirm_text">정말로 쪽지를 삭제하시겠습니까?</p>
+    <div class="confirm_buttons">
+      <button class="btn_confirm" onclick="confirmDelete()">확인</button>
+      <button class="btn_cancel" onclick="closeDeleteModal()">취소</button>
+    </div>
+  </div>
+</div> -->
+
+<!-- <div class="modal_bg" id="sendSuccessModal">
+    <div class="modal_box modal_send">
+      <p class="send_message">쪽지가 삭제되었습니다.</p>
+      <div class="modal_button">
+        <button class="btn_confirm" onclick="closeSendModal()">확인</button>
+      </div>
+    </div>
+  </div> -->
+<div class="modal_bg" id="sentMsgReadModal">
+  <div class="modal_box read_modal">
+    <div class="modal_header">
+      <span class="modal_title">보낸 쪽지 읽기</span>
+      <span class="modal_close" onclick="closeSentMsgModal()">&times;</span>
+    </div>
+    <div class="modal_info">
+      <div class="receiver_info">
+        <span>받는 사람 : </span>강버들 | <span class="receiver_id">kangbudle01</span>
+      </div>
+      <div class="message_content">
+        나 이대나온 남자야. 까불지마
+      </div>
+    </div>
+    <div class="modal_button">
+      <button class="btn_delete">삭제</button>
+    </div>
+  </div>
+</div>
 
 
   <div id="footer"></div>
