250809 00:38 강버들 음식점 진행중

--- a/webapp/app/restaurant/restaurant.html
+++ b/webapp/app/restaurant/restaurant.html
@@ -45,56 +45,19 @@
               잠원동
             </li>
           </ul>
-            <div class="region_small">
-              <ul>
-                <li>방배 1동</li>
-                <li>방배 2동</li>
-                <li>방배 3동</li>
-                <li>방배 4동</li>
-                <li>방배 본동</li>
-              </ul>
-            </div>
+          <div class="region_small">
+            <ul id="region_small_list"></ul>
+          </div>
         </div>
         <div class="restaurant_select">
           <div class="restaurant_board">
             <div class="restaurant_row">
-              <div class="restaurant_card">
-                <div class="restaurant_name">
-                  식당 이름
-                </div>
-                <div class="restaurant_introduce">
-                  <div class="restaurant_info">
-                    <div>
-                      주소
-                    </div>
-                    <div>
-                      영업시간
-                    </div>
-                    <div>
-                      연락처
-                    </div>
-                  </div>
-                  <div class="restaurant_mark">
-                    <div>
-                      별
-                    </div>
-                    <div>
-                      찜하기
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="restaurant_card">
-                카드2
-              </div>
+              <div class="restaurant_card"></div>
+              <div class="restaurant_card"></div>
             </div>
             <div class="restaurant_row">
-              <div class="restaurant_card">
-                카드3
-              </div>
-              <div class="restaurant_card">
-                카드4
-              </div>
+              <div class="restaurant_card"></div>
+              <div class="restaurant_card"></div>
             </div>
           </div>
           <div class="restaurant_pagenation">
