250808 23:39 이재빈 포인트충전 중

--- a/webapp/app/myPageNormal/normalMatching.html
+++ b/webapp/app/myPageNormal/normalMatching.html
@@ -13,17 +13,17 @@
   <div id="header"></div>
   <main>
     <nav class="main_sidebar">
-      <img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#">
       <ul>
-        <a href="./normalModify.html"><li>개인정보 수정</li></a>
-        <a href="./normalMark.html"><li>찜한 목록</li></a>
-        <a href="./normalheart.html"><li>하트 목록</li></a>
-        <a href="./normalMatching.html"><li>매칭 기록</li></a>
-        <a href="./normalMesseage.html"><li>쪽지함</li></a>
-        <a href="./normalPost.html"><li>게시글 관리</li></a>
-        <a href="./normalPoint.html"><li>포인트 충전</li></a>
-        <a href="./normalReference.html"><li>1 대 1 문의</li></a>
-        <a href="./normalQuit.html"><li>회원 탈퇴</li></a>
+        <li><img src="./../../assets/img/myPageNormal/normalMember.jpg" alt="#"></li>
+        <li><a href="./normalModify.html">개인정보 수정</a></li>
+        <li><a href="./normalMark.html">찜한 목록</a></li>
+        <li><a href="./normalheart.html">하트 목록</a></li>
+        <li><a href="./normalMatching.html">매칭 기록</a></li>
+        <li><a href="./normalMesseage.html">쪽지함</a></li>
+        <li><a href="./normalPost.html">게시글 관리</a></li>
+        <li><a href="./normalPoint.html">포인트 충전</a></li>
+        <li><a href="./normalReference.html">1 대 1 문의</a></li>
+        <li><a href="./normalQuit.html">회원 탈퇴</a></li>
       </ul>
     </nav>
     <div class="div_mark">
@@ -31,18 +31,18 @@
       <form action="" method="get">
         <nav class="month">
           <ul>
-            <li>1월</li>
-            <li>2월</li>
-            <li>3월</li>
-            <li>4월</li>
-            <li>5월</li>
-            <li>6월</li>
-            <li>7월</li>
-            <li>8월</li>
-            <li>9월</li>
-            <li>10월</li>
-            <li>11월</li>
-            <li>12월</li>
+            <li><a href="">1월</a></li>
+            <li><a href="">2월</a></li>
+            <li><a href="">3월</a></li>
+            <li><a href="">4월</a></li>
+            <li><a href="">5월</a></li>
+            <li><a href="">6월</a></li>
+            <li><a href="">7월</a></li>
+            <li><a href="">8월</a></li> 
+            <li><a href="">9월</a></li>
+            <li><a href="">10월</a></li>
+            <li><a href="">11월</a></li>
+            <li><a href="">12월</a></li>
           </ul>
         </nav>
         <nav class="matching">
@@ -50,27 +50,45 @@
             <li>
               <div>2일 김괭이 돌봄회원 | 이용 시간 : 09 : 00 ~ 18 : 00
               포인트 사용 : 10,000</div>
-              <div>
+              <div class="matchingbutton">
                 <button>이용완료</button>
                 <button>취소</button>
               </div>
             </li>
+          </ul>
+        </nav>
+        <nav class="matching">
+          <ul>
             <li>
-        
+              <div>2일 김괭이 돌봄회원 | 이용 시간 : 09 : 00 ~ 18 : 00
+                포인트 사용 : 10,000</div>
+              <div class="matchingbutton">
+                <button>이용완료</button>
+                <button>취소</button>
+              </div>
             </li>
+          </ul>
+        </nav>
+        <nav class="matching">
+          <ul>
             <li>
-        
+              <div>2일 김괭이 돌봄회원 | 이용 시간 : 09 : 00 ~ 18 : 00
+                포인트 사용 : 10,000</div>
+              <div class="matchingbutton">
+                <button>이용완료</button>
+                <button>취소</button>
+              </div>
             </li>
           </ul>
         </nav>
         <nav class="page">
           <ul>
-            <a href=""><li>&lt;</li></a>
-            <a href=""><li>1</li></a>
-            <a href=""><li>2</li></a>
-            <a href=""><li>3</li></a>
-            <a href=""><li>4</li></a>
-            <a href=""><li>&gt;</li></a>
+            <li><a href="">&lt;</a></li>
+            <li><a href="">1</a></li>
+            <li><a href="">2</a></li>
+            <li><a href="">3</a></li>
+            <li><a href="">4</a></li>
+            <li><a href="">&gt;</a></li>
           </ul>
         </nav>
       </form>
