250809 0251 황승우 관리자페이지...

--- a/webapp/app/admin/userManager.html
+++ b/webapp/app/admin/userManager.html
@@ -48,68 +48,68 @@
             </div>
             <div class="table">
               <ul class="table_body">
-                <li class="body_number">1</li>
-                <li class="body_name">가나다</li>
-                <li class="body_id">abc123</li>
-                <li class="body_email">bellguy@naver.com</li>
-                <li class="body_phone">010-1234-5678</li>
-                <li class="body_type">일반</li>
+                <li class="body_number"><a href="">1</a></li>
+                <li class="body_name"><a href="">가나다</a></li>
+                <li class="body_id"><a href="">abc123</a></li>
+                <li class="body_email"><a href="">bellguy@naver.com</a></li>
+                <li class="body_phone"><a href="">010-1234-5678</a></li>
+                <li class="body_type"><a href="">일반</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number">2</li>
-                <li class="body_name">가나다</li>
-                <li class="body_id">abc123</li>
-                <li class="body_email">bellguy@naver.com</li>
-                <li class="body_phone">010-1234-5678</li>
-                <li class="body_type">일반</li>
+                <li class="body_number"><a href="">2</a></li>
+                <li class="body_name"><a href="">가나다</a></li>
+                <li class="body_id"><a href="">abc123</a></li>
+                <li class="body_email"><a href="">bellguy@naver.com</a></li>
+                <li class="body_phone"><a href="">010-1234-5678</a></li>
+                <li class="body_type"><a href="">일반</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number">3</li>
-                <li class="body_name">가나다</li>
-                <li class="body_id">abc123</li>
-                <li class="body_email">bellguy@naver.com</li>
-                <li class="body_phone">010-1234-5678</li>
-                <li class="body_type">일반</li>
+                <li class="body_number"><a href="">3</a></li>
+                <li class="body_name"><a href="">가나다</a></li>
+                <li class="body_id"><a href="">abc123</a></li>
+                <li class="body_email"><a href="">bellguy@naver.com</a></li>
+                <li class="body_phone"><a href="">010-1234-5678</a></li>
+                <li class="body_type"><a href="">일반</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number">4</li>
-                <li class="body_name">가나다</li>
-                <li class="body_id">abc123</li>
-                <li class="body_email">bellguy@naver.com</li>
-                <li class="body_phone">010-1234-5678</li>
-                <li class="body_type">일반</li>
+                <li class="body_number"><a href="">4</a></li>
+                <li class="body_name"><a href="">가나다</a></li>
+                <li class="body_id"><a href="">abc123</a></li>
+                <li class="body_email"><a href="">bellguy@naver.com</a></li>
+                <li class="body_phone"><a href="">010-1234-5678</a></li>
+                <li class="body_type"><a href="">일반</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number">5</li>
-                <li class="body_name">가나다</li>
-                <li class="body_id">abc123</li>
-                <li class="body_email">bellguy@naver.com</li>
-                <li class="body_phone">010-1234-5678</li>
-                <li class="body_type">일반</li>
+                <li class="body_number"><a href="">5</a></li>
+                <li class="body_name"><a href="">가나다</a></li>
+                <li class="body_id"><a href="">abc123</a></li>
+                <li class="body_email"><a href="">bellguy@naver.com</a></li>
+                <li class="body_phone"><a href="">010-1234-5678</a></li>
+                <li class="body_type"><a href="">일반</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number">6</li>
-                <li class="body_name">가나다</li>
-                <li class="body_id">abc123</li>
-                <li class="body_email">bellguy@naver.com</li>
-                <li class="body_phone">010-1234-5678</li>
-                <li class="body_type">일반</li>
+                <li class="body_number"><a href="">6</a></li>
+                <li class="body_name"><a href="">가나다</a></li>
+                <li class="body_id"><a href="">abc123</a></li>
+                <li class="body_email"><a href="">bellguy@naver.com</a></li>
+                <li class="body_phone"><a href="">010-1234-5678</a></li>
+                <li class="body_type"><a href="">일반</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number">7</li>
-                <li class="body_name">가나다</li>
-                <li class="body_id">abc123</li>
-                <li class="body_email">bellguy@naver.com</li>
-                <li class="body_phone">010-1234-5678</li>
-                <li class="body_type">일반</li>
+                <li class="body_number"><a href="">7</a></li>
+                <li class="body_name"><a href="">가나다</a></li>
+                <li class="body_id"><a href="">abc123</a></li>
+                <li class="body_email"><a href="">bellguy@naver.com</a></li>
+                <li class="body_phone"><a href="">010-1234-5678</a></li>
+                <li class="body_type"><a href="">일반</a></li>
               </ul>
               <ul class="table_body">
-                <li class="body_number">8</li>
-                <li class="body_name">가나다</li>
-                <li class="body_id">abc123</li>
-                <li class="body_email">bellguy@naver.com</li>
-                <li class="body_phone">010-1234-5678</li>
-                <li class="body_type">일반</li>
+                <li class="body_number"><a href="">8</a></li>
+                <li class="body_name"><a href="">가나다</a></li>
+                <li class="body_id"><a href="">abc123</a></li>
+                <li class="body_email"><a href="">bellguy@naver.com</a></li>
+                <li class="body_phone"><a href="">010-1234-5678</a></li>
+                <li class="body_type"><a href="">일반</a></li>
               </ul>
             </div>
           </div>
