--- a/webapp/app/myPageNormal/normalQuit.html
+++ b/webapp/app/myPageNormal/normalQuit.html
@@ -45,13 +45,12 @@
         <div class="quit_box">
           <div class="quit_day">
             <div class="quit_text">탈퇴 날짜</div>
-            <div>2025-08-08</div>
+            <div class="quit_today">2025-08-08</div>
           </div>
           <div class="quit_reason">
             <div class="quit_text">탈퇴 사유</div>
             <div>
-              <div>탈퇴 사유를 입력하여 주십시오.</div>
-              <div>v</div>
+              <input placeholder="탈퇴 사유를 입력하여 주십시오">
             </div>
           </div>
         </div>
